fix header alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -97,6 +97,7 @@
 
     h2 {
         margin-bottom: 0;
+        line-height: 2.8125rem;
     }
 
     h2 a {
